syntax = "proto3";

option java_package = "dev.pranavtech.node";
option java_outer_classname = "NodeProto";
service NodeService {
  rpc SendElection(MessageRequest) returns (MessageResponse);
  rpc SendLeader (MessageRequest) returns (MessageResponse);
  rpc Register(MessageRequest) returns (MessageResponse);
  rpc SetNext(MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  int32 origin = 1;
  int32 message = 2;
}

message MessageResponse {
  int32 ack = 1;
}

